--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
+/* h1#title {
+  text-align: center;
+}
+
+button#start-game-button {
+  text-align: center;
+} */
+
+
+div#game-start-screen {
+  text-align: center;
+}
+
 #game div {
   border: 1px solid black;
   width: 15%;
@@ -5,3 +18,8 @@
   margin: 10px;
   display: inline-block;
 }
+
+
+div#game {
+  display: none;
+} 
