add protoptype of restart game feats abd live score

--- a/src/style.css
+++ b/src/style.css
@@ -22,4 +22,10 @@ div#game-start-screen {
 
 div#game {
   display: none;
+  text-align: center;
 } 
+
+div#game-over-screen {
+  text-align: center;
+  display: none;
+}
